<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/description"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Warning"
            android:textSize="20sp" />

        <Button
            android:id="@+id/select_file_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_file" />
        <Button
            android:id="@+id/act_hijacked_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activate_hijacked" />
        <Button
            android:id="@+id/dis_hijacked_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disable_hijacked" />
        <Button
            android:id="@+id/act_voices_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activate_voices" />
        <Button
            android:id="@+id/dis_voices_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disable_voices" />
    </LinearLayout>
</ScrollView>
